# brag

./: .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  Makefile  RAYCAST_INTEGRATION.md  README.md  SECURITY.md  install.sh  pyproject.toml  pytest.ini  setup_shell.sh  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
brag/: cli.py  models.py  storage.py
raycast-extension/: package-lock.json  package.json  raycast-env.d.ts  tsconfig.json
raycast-extension/src/: add-brag.tsx  config.ts  export-brags.tsx  recent-brags.tsx  search-brags.tsx
tests/: test_cli.py  test_models.py  test_storage.py
