[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brag-cli"
version = "0.1.0"
description = "A CLI tool to track your accomplishments for performance reviews"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
brag = "brag.cli:main"
